# oxidb

./: Cargo.toml  Dockerfile  Makefile  README.md
oxidb_core/: Cargo.toml  README.md
oxidb_core/src/: lib.rs  types.rs
oxidb_core/src/column_value/: mod.rs
oxidb_core/src/data_type/: mod.rs
oxidb_core/src/types/: column_value.rs  mod.rs
oxidb_schema/: Cargo.toml  README.md
oxidb_schema/src/: lib.rs
oxidb_storage/: Cargo.toml  README.md
oxidb_storage/src/: lib.rs
oxidb_storage/src/babylon/: column.rs  mod.rs  page.rs  table.rs
oxidb_storage/tests/: babylon_test.rs
src/: db.rs  lib.rs  main.rs  paged_db.rs  simple_db.rs  types.rs
src/simple_db/: mod.rs  page.rs
src/storage/: mod.rs  page.rs
src/types/: column_value.rs  mod.rs
